fixed horizontal scroll on team menu header

--- a/app/assets/stylesheets/header/header-team-menu.scss
+++ b/app/assets/stylesheets/header/header-team-menu.scss
@@ -103,7 +103,7 @@
     .header-team-menu-divider {
       border-bottom: 2px solid #f0f0f2;
       margin: 4px;
-      width: 100%;
+      width: calc(100% - 8px);
       float: left;
     }
 
